# Jono

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  alphabeta.c  alphabeta.h  bitboards.c  bitboards.h  debug.c  debug.h  main.c  main.h  movgen.c  movgen.h  timemgmt.c  timemgmt.h
Debug/: makefile
Perft/: perft.c  perftresults.txt  perftresults_quick.txt
Release/: makefile
Search test/: compare.c  searchtest.c  testpositions.txt
